--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -26,7 +26,7 @@
   }
 
   & ul.pagination {
-    display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     margin-top: 10px;
     margin-bottom: 25px;
@@ -40,6 +40,7 @@
     border-color: #007c5d;
     justify-content: center;
     align-items: center;
+    border-radius: 0;
   }
 
   .page-item.active .page-link {
