--- a/src/scss/styles/audioPlayer.scss
+++ b/src/scss/styles/audioPlayer.scss
@@ -5,6 +5,7 @@ $rhap_time-color: #d3d3d3 !default;
 $rhap_font-family: inherit !default;
 
 .rhap_container {
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
   line-height: 1;
@@ -14,7 +15,7 @@ $rhap_font-family: inherit !default;
   background-color: $rhap_background-color;
 
   &:focus {
-    outline: none;
+    outline: 0;
   }
 
   svg {
@@ -22,10 +23,24 @@ $rhap_font-family: inherit !default;
   }
 }
 
+.rhap_header {
+  margin-bottom: 10px;
+}
+
+.rhap_footer {
+  margin-top: 5px;
+}
+
 .rhap_main {
   display: flex;
-  flex-direction: row-reverse;
+  flex-direction: column;
   flex: 1 1 auto;
+}
+
+.rhap_stacked {
+  .rhap_controls-section {
+    margin-top: 8px;
+  }
 }
 
 .rhap_horizontal {
@@ -40,7 +55,13 @@ $rhap_font-family: inherit !default;
   flex-direction: row-reverse;
 
   .rhap_controls-section {
-    margin-right: 8px;
+    flex: none;
+    margin: 0 20px 0 0;
+  }
+
+  .rhap_volume-controls {
+    flex: none;
+    width: 100px;
   }
 }
 
@@ -68,8 +89,8 @@ $rhap_font-family: inherit !default;
   cursor: pointer;
   -webkit-user-select: none;
 
-  &:focus {
-    outline: none;
+  &:focus:not(:focus-visible) {
+    outline: 0;
   }
 }
 
@@ -125,9 +146,23 @@ $rhap_font-family: inherit !default;
 
 .rhap_controls-section {
   display: flex;
-  flex: 0 0 auto;
+  flex: 1 1 auto;
   justify-content: space-between;
-  margin-right: 10px;
+  align-items: center;
+}
+
+.rhap_additional-controls {
+  display: flex;
+  flex: 1 0 auto;
+  align-items: center;
+}
+
+.rhap_repeat-button {
+  font-size: 26px;
+  width: 26px;
+  height: 26px;
+  color: $rhap_theme-color;
+  margin-right: 6px;
 }
 
 .rhap_main-controls {
@@ -143,10 +178,6 @@ $rhap_font-family: inherit !default;
   font-size: 35px;
   width: 35px;
   height: 35px;
-
-  &:focus {
-    outline: none;
-  }
 }
 
 .rhap_play-pause-button {
@@ -154,6 +185,69 @@ $rhap_font-family: inherit !default;
   width: 40px;
   height: 40px;
 
+}
+
+.rhap_volume-controls {
+  display: flex;
+  flex: 1 0 auto;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.rhap_volume-button {
+  flex: 0 0 26px;
+  font-size: 26px;
+  width: 26px;
+  height: 26px;
+  color: $rhap_theme-color;
+  margin-right: 6px;
+}
+
+.rhap_volume-container {
+  display: flex;
+  align-items: center;
+  flex: 0 1 100px;
+  -webkit-user-select: none;
+}
+
+.rhap_volume-bar-area {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 14px;
+  cursor: pointer;
+
+  &:focus:not(:focus-visible) {
+    outline: 0;
+  }
+}
+
+.rhap_volume-bar {
+  box-sizing: border-box;
+  position: relative;
+  width: 100%;
+  height: 4px;
+  background: $rhap_bar-color;
+  border-radius: 2px;
+}
+
+.rhap_volume-indicator {
+  box-sizing: border-box;
+  position: absolute;
+  width: 12px;
+  height: 12px;
+  margin-left: -6px;
+  left: 0;
+  top: -4px;
+  background: $rhap_theme-color;
+  opacity: 0.9;
+  border-radius: 50px;
+  box-shadow: rgba($rhap_theme-color, .5) 0 0 3px;
+  cursor: pointer;
+
+  &:hover {
+    opacity: .9;
+  }
 }
 
 /* Utils */
