--- a/src/components/finish-game/finish-game.scss
+++ b/src/components/finish-game/finish-game.scss
@@ -1,5 +1,11 @@
+.finish-game {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 @media (max-width: 575.98px) {
-  finish-game img {
+  .finish-game img {
     width: 100%;
   }
 
