fix: answer click handling

--- a/src/components/answer-list/answer-list.scss
+++ b/src/components/answer-list/answer-list.scss
@@ -3,7 +3,7 @@
 
   & .list-group-item {
     cursor: pointer;
-    padding: .85rem 1.25rem;
+    padding: 20px 1.25rem;
   }
 
   & .list-group-item:hover {
